Style the sidebar

--- a/index.html
+++ b/index.html
@@ -3,12 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <title>Organisation XIII Sign Up</title>
 </head>
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="img/logo.png">
+            <div class="blur"><svg class="logo" version="1.0" xmlns="http://www.w3.org/2000/svg"
+                width="640.000000pt" height="1137.000000pt" viewBox="0 0 640.000000 1137.000000"
+                preserveAspectRatio="xMidYMid meet">
+                <defs>
+                    <radialGradient id="Gradient" cx="0.5" cy="0.5" r="0.5" fx="0.25" fy="0.25">
+                      <stop offset="0%" stop-color="black" />
+                      <stop offset="100%" stop-color="#323232" />
+                    </radialGradient>
+                    <filter id="f3" x="0" y="0" width="200%" height="200%">
+                        <feOffset result="offOut" in="SourceAlpha" dx="0" dy="0" />
+                        <feGaussianBlur result="blurOut" in="offOut" stdDeviation="8" />
+                        <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+                    </filter>
+                </defs>
+                <rect class="black-banner" width="100%" height="180" fill="#000000"></rect>
+               <g transform="translate(0.000000,1137.000000) scale(0.100000,-0.100000)"
+               fill="url(#Gradient)" filter="url(#f3)" stroke="none">
+               <path d="M3170 9567 c0 -20 -97 -386 -137 -517 -36 -121 -103 -291 -153 -390
+               -43 -86 -143 -244 -160 -255 -6 -4 -10 -11 -10 -17 0 -6 18 -7 49 -3 154 21
+               295 -105 295 -265 0 -104 -52 -187 -149 -238 -128 -66 -297 -5 -354 129 -22
+               51 -31 165 -15 190 9 15 4 12 -99 -58 -188 -128 -471 -235 -930 -353 -92 -24
+               -164 -46 -160 -50 4 -4 51 -18 103 -30 136 -32 449 -123 555 -160 149 -53 317
+               -133 422 -202 l100 -66 -1 67 c0 81 27 143 86 196 55 50 101 68 178 68 110 1
+               197 -54 244 -153 33 -70 28 -197 -13 -320 -37 -111 -84 -193 -188 -332 -82
+               -108 -83 -117 -13 -118 73 -1 162 -66 206 -151 25 -49 30 -137 10 -197 -21
+               -63 -82 -134 -139 -161 -52 -25 -169 -29 -221 -7 -75 31 -141 113 -161 198
+               l-11 50 -66 -69 c-171 -176 -309 -365 -368 -506 -32 -78 -53 -270 -40 -368 29
+               -214 151 -381 345 -475 176 -85 361 -83 543 6 81 41 185 129 241 205 l22 30
+               17 -25 c36 -53 129 -143 187 -181 97 -64 199 -92 330 -93 174 0 289 44 416
+               161 88 81 151 182 179 285 20 73 22 98 17 213 -3 75 -13 153 -22 185 -41 137
+               -150 297 -360 534 l-88 99 -22 -67 c-35 -109 -125 -185 -237 -201 -96 -14
+               -215 52 -262 147 -52 105 -26 254 57 324 46 39 106 64 154 64 23 0 45 4 48 10
+               3 5 -14 33 -38 63 -128 158 -216 319 -243 449 -23 106 -15 212 19 271 55 94
+               158 146 261 132 140 -18 236 -128 236 -271 0 -30 2 -54 5 -54 2 0 42 24 87 54
+               212 137 508 248 963 360 150 37 148 36 75 56 -36 10 -128 34 -205 54 -400 106
+               -702 227 -860 345 -27 20 -55 40 -60 43 -7 4 -10 -23 -10 -75 0 -97 -19 -140
+               -88 -204 -75 -69 -178 -86 -277 -47 -51 21 -132 109 -148 161 -39 131 16 261
+               136 320 47 23 69 28 129 27 l71 -1 -39 54 c-146 197 -273 519 -390 988 -32
+               132 -48 177 -49 142z"/>
+               </g>
+               <text x="150" y="590" filter="url(#f3)" class="thirteen-text">XIII</text>
+               </svg>
+               </div>
         </div>
         <div class="main-content">
             <div class="pitch-text">Join us in our search for meaning. 
