Style main content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text">
     <link href="style.css" rel="stylesheet">
     <title>Organisation XIII Sign Up</title>
 </head>
@@ -62,25 +63,26 @@
             <div class="form">
                 <form>
                     <div class="card">
-                        <p>JOIN ORGANISATION XIII</p>
+                        <div>JOIN ORGANISATION XIII</div>
+                        <br>
                         <label for="old_name">OLD NAME</label>
-                        <input type="text" id="old_name" name="old_name">
                         <label for="new_name">NEW NAME</label>
-                        <input type="text" id="new_name" name="new_name"> 
+                        <input class="textfield" type="text" id="old_name" name="old_name">
+                        <input class="textfield" type="text" id="new_name" name="new_name"> 
                         <label for="email">EMAIL</label>
-                        <input type="email" id="email" name="email"> 
                         <label for="phone">PHONE NUMBER</label>
-                        <input type="text" id="phone" name="phone"> 
+                        <input class="textfield" type="email" id="email" name="email"> 
+                        <input class="textfield" type="text" id="phone" name="phone"> 
                         <label for="password">PASSWORD</label>
-                        <input type="password" id="password" name="password"> 
                         <label for="confirmpassword">CONFIRM PASSWORD</label>
-                        <input type="password" id="confirmpassword" name="confirmpassword"> 
-                        <input type="radio" id="already_nobody" name="nobody">
+                        <input class="textfield" type="password" id="password" name="password"> 
+                        <input class="textfield" type="password" id="confirmpassword" name="confirmpassword"> 
                         <label for="already_nobody">Already a Nobody</label>
-                        <input type="radio" id="not_nobody" name="nobody">
+                        <input class="radio" type="radio" id="already_nobody" name="nobody">
                         <label for="not_nobody">Not a Nobody yet</label>
+                        <input class="radio" type="radio" id="not_nobody" name="nobody">
                     </div>
-                    <input type="submit" value="JOIN ORGANISATION XIII">
+                    <input type="submit" value="CREATE ACCOUNT">
                 </form>
                 <div>Already a member? <a href="">Log in</a></div>
             </div>
